--- a/FileIO/CMakeLists.txt
+++ b/FileIO/CMakeLists.txt
@@ -46,6 +46,7 @@ INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}/../GeoLib
 	${CMAKE_CURRENT_SOURCE_DIR}/../MathLib
 	${CMAKE_CURRENT_SOURCE_DIR}/../MeshLib
+	${CMAKE_CURRENT_BINARY_DIR}/..
 	${CMAKE_CURRENT_BINARY_DIR}/../BaseLib
 )
 
