--- a/Applications/DataExplorer/CMakeLists.txt
+++ b/Applications/DataExplorer/CMakeLists.txt
@@ -15,4 +15,5 @@ ADD_SUBDIRECTORY( DataView )
 ADD_SUBDIRECTORY( DataView/DiagramView )
 ADD_SUBDIRECTORY( VtkVis )
 ADD_SUBDIRECTORY( VtkAct )
+ADD_SUBDIRECTORY( InfoVis )
 INCLUDE( DataExplorer.cmake )
