--- a/Applications/DataExplorer/InfoVis/CMakeLists.txt
+++ b/Applications/DataExplorer/InfoVis/CMakeLists.txt
@@ -4,6 +4,8 @@ set( SOURCES
 	JavaScriptMessageForwardingQWebPage.cpp
 	JavaScriptGate.cpp
 	DSVFormatReader.cpp
+	MetaData.cpp
+	Data.cpp
 )
 
 # Moc headers
@@ -11,6 +13,8 @@ set( MOC_HEADERS
 	WebViewWidget.h
 	JavaScriptMessageForwardingQWebPage.h
 	JavaScriptGate.h
+	MetaData.h
+	Data.h
 )
 
 # Header files
