fixed copying of needed HTML and JS files to corresponding directory - DataExplorer expects these files in subdirectory QtWebkitRessources relative to executable - fixed CMakeLists.txt to copy all needed files

--- a/Applications/DataExplorer/InfoVis/CMakeLists.txt
+++ b/Applications/DataExplorer/InfoVis/CMakeLists.txt
@@ -58,8 +58,11 @@ set_property(TARGET QtBase PROPERTY FOLDER "DataExplorer")
 
 set(
 	FILES_TO_BE_COPIED
-	D3Test.html
-	infovis.js
+	"D3Test.html"
+	"infovis.js"
+	"inheritance.js"
+	"Interaction Test.html"
+	"history.js"
 )
 
 set(
